--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
                     </div>
                 </div>
                 <div class="col-lg-7 order-lg-1 hero-content">
-                    <span class="h3" data-aos="fade-up" data-aos-delay="0">Namasté, I'm</span>
-                    <h1 class="name" data-aos="fade-up" data-aos-delay="200"><span>Vijay Singh</h1>
-                    <button type="button" class="btn btn-sm mt-3 mb-3 btn-showcase"  data-aos="fade-up" data-aos-delay="400"><i class="bi bi-stars"></i> Frontend Developer</button>
-                    <p class="tagline mb-3" data-aos="fade-up" data-aos-delay="600">Started <span class="underline">unintentionally</span> with messy Discord bot templates in 2021. Now, creating beautiful and responsive websites and templates for everyone to explore! But this time <span class="underline">intentionally</span>.</p>
+                    <span class="h3" data-aos="fade-up" data-aos-delay="0">Hi There!, I'm</span>
+                    <h1 class="name" data-aos="fade-up" data-aos-delay="200"><span>Yolandi van Staden</h1>
+                    <button type="button" class="btn btn-sm mt-3 mb-3 btn-showcase"  data-aos="fade-up" data-aos-delay="400"><i class="bi bi-stars"></i> Integrated Innovations: Plant Design, Infrastructure, and Full Stack Software Development</button>
+                    <p class="tagline mb-3" data-aos="fade-up" data-aos-delay="600">Combining <span class="underline">my deep</span> in plant design, infrastructure, and full-stack software development, I innovate solutions that integrate efficiency and excellence. <span class="underline">intentionally</span>.</p>
                     <div class="social-icons pb-2 pt-2 mb-2">
                         <a href="https://github.com/itsvijaysingh/" target="_blank" class="github" data-aos="fade-up" data-aos-delay="620"><i class="bi bi-github"></i></a>
                         <a href="https://twitter.com/_itsvj/" target="_blank" class="twitter-x" data-aos="fade-up" data-aos-delay="64 0"><i class="bi bi-twitter-x"></i></a>
@@ -176,18 +176,18 @@
         <div class="container">
             <h6 class="text-center"><span class="btn btn-sm theme-button theme-text">But who am I?</span></h6>
             <h2 class="section-heading text-center">About Me</h2>
-            <p class="text-center muted-text mt-3 mb-4">My store in a nutshell ;)</p>
+            <p class="text-center muted-text mt-3 mb-4">Myself in a nutshell ;)</p>
             <div class="row justify-content-center" data-aos="fade-down" data-aos-delay="200">
                 <div class="col-lg-5 about-portrait">
                     <img src="assets/images/portrait-2.webp" class="img-fluid pic" alt="About Me Portrait">
                 </div>
                 <div class="col-lg-7">
                     <p class="bio">
-                        Hey there, I'm Vijay, a 20-year-old coding enthusiast from India. I'm currently doing part-time blogging with my full-time journey as a frontend web developer. My coding journey began with experimenting on Discord bots. Now, I'm pursuing a master's degree in computer applications to deepen my skills and passion for web development.
+                        Hey there, I'm Yolandi van Staden, a 30-year-old coding enthusiast from South Africa. With a foundation in plant design and infrastructure, I bring a fresh perspective to full-stack software development and cloud computing. Passionate about integrating creativity with technical precision, I am dedicated to crafting innovative solutions that drive efficiency and excellence in every project I undertake.
                         </br></br>
-                        My main goal in coding is simple: to create things that look great and serve a purpose. Whether it's designing sleek designs or expanding web applications, I'm always exploring new ideas to make something awesome. Apart from coding, when I'm not coding or catching up on news, you can often find me immersed in the world of battle royale games.
+                        My main goal is to leverage my expertise in plant design and infrastructure alongside my burgeoning skills in coding and cloud computing to pioneer transformative solutions. I aim to innovate at the intersection of creativity and technology, driving efficiency and sustainability in diverse projects globally
                         </br></br>
-                        And yeah, I also write about my adventures in tech and gaming. If you're interested, you can check out my gaming blog, <a href="https://gamesroid.com/" target="_blank">GamesRoid</a>.</p>
+                        <a href="https://gamesroid.com/" target="_blank">GamesRoid</a>.</p>
                 </div>
             </div>
         </div>
